--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </td>
     </tr>
   </table>
-    <a href="contact-me.html">Contact us</a>
+    <a href="contact-me.html">Feedback</a>
 </body>
 
 </html>
