--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
   <table border="0">
     <tr>
       <td>HTML(5)</td>
-      <td><td><span style="font-size:200%;color:green;">&star;</span>
-      <td ><span style="font-size:200%;color:green;">&star;</span>
-      <td ><span style="font-size:200%;color:green;">&star;</span>
-      <td ><span style="font-size:200%;color:green;">&star;</span>
-      <td ><span style="font-size:200%;color:green;">&star;</span></td>
+      <td><td><span style="font-size:200%;color:green;">&starf;</span>
+      <td ><span style="font-size:200%;color:green;">&starf;</span>
+      <td ><span style="font-size:200%;color:green;">&starf;</span>
+      <td ><span style="font-size:200%;color:green;">&starf;</span>
+      <td ><span style="font-size:200%;color:green;">&starf;</span></td>
       <td >  <td> CSS(3)</td>
-        <td><td ><span style="font-size:200%;color:green;">&star;</span>
-        <td><span style="font-size:200%;color:green;">&star;</span>
-        <td ><span style="font-size:200%;color:green;">&star;</span>
-        <td><span style="font-size:200%;color:green;">&star;</span>
-        <td><span style="font-size:200%;color:green;">&star;</span></td></td>
+        <td><td ><span style="font-size:200%;color:green;">&starf;</span>
+        <td><span style="font-size:200%;color:green;">&starf;</span>
+        <td ><span style="font-size:200%;color:green;">&starf;</span>
+        <td><span style="font-size:200%;color:green;">&starf;</span>
+        <td><span style="font-size:200%;color:green;">&starf;</span></td></td>
 </td>
     </tr>
     <tr>
@@ -69,11 +69,11 @@
       <td ><span style="font-size:200%;color:green;">&starf;</span>
       <td ><span style="font-size:200%;color:green;">&starf;</span></td>
       <td >  <td> PYTHON</td>
-        <td><td><span style="font-size:200%;color:green;">&star;</span>
-        <td ><span style="font-size:200%;color:green;">&star;</span>
-        <td ><span style="font-size:200%;color:green;">&star;</span>
-        <td ><span style="font-size:200%;color:green;">&star;</span>
-        <td ><span style="font-size:200%;color:green;">&star;</span></td></td>
+        <td><td><span style="font-size:200%;color:green;">&starf;</span>
+        <td ><span style="font-size:200%;color:green;">&starf;</span>
+        <td ><span style="font-size:200%;color:green;">&starf;</span>
+        <td ><span style="font-size:200%;color:green;">&starf;</span>
+        <td ><span style="font-size:200%;color:green;">&starf;</span></td></td>
 </td>
     </tr>
   </table>
