--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>BK'S Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: blue;">
   <table cellspacing="20">
     <tr>
       <td><img class="fit-picture" align="top" src="image.jpg" height="180" width="150" alt="leo di"></img></td>
