--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
-<html lang="\" dir="ltr">
+<html>
 
 <head>
   <meta charset="utf-8">
-  <title>BK'S Personal Site</title>
+  <title>Home:</title>	
+  <link rel="stylesheet" href="styles.css">
 </head>
 
-<body style="background-color: blue;">
+<body>
   <table cellspacing="20">
     <tr>
-      <td><img class="fit-picture" align="top" src="image.jpg" height="180" width="150" alt="leo di"></img></td>
+      <td><img align="top" src="image.jpg" height="180" width="150" alt="leo di"></img></td>
       <td>
         <h2><a href="https://www.facebook.com/BommanKondaPraveenKumar/">BK Praveen Kumar</a></h2>
         <h3><em>Data Scientist<strong></strong> </em> </h3>
       </td>
     </tr>
   </table>
-  <hr size="5" noshade>
+  <hr>
   <h3 align="left">Courses</h3>
   <ul>
     <li>The complete course of HTML5</li>
   </ul>
   </ul>
-  <hr size="3" noshade>
+  <hr>
   <h3 align="left">ACADEMIC</h3>
   <table border="1">
     <thead>
@@ -40,44 +41,51 @@
       <td align="middle">B.TECH IN COMPUTER SCIENCE</td>
     </tr>
   </table>
-  <hr size="3" noshade>
+  <hr>
   <a href="Hobbies.html">Hobbies</a> <a href="contactus.html">Contact us</a>
   <hr>
-  <h3>Skills</h3>
+  <h3>skills</h3>
   <hr>
   <table border="0">
     <tr>
       <td>HTML(5)</td>
-      <td><td><span style="font-size:200%;color:green;">&starf;</span>
-      <td ><span style="font-size:200%;color:green;">&starf;</span>
-      <td ><span style="font-size:200%;color:green;">&starf;</span>
-      <td ><span style="font-size:200%;color:green;">&starf;</span>
-      <td ><span style="font-size:200%;color:green;">&starf;</span></td>
-      <td >  <td> CSS(3)</td>
-        <td><td ><span style="font-size:200%;color:green;">&starf;</span>
-        <td><span style="font-size:200%;color:green;">&starf;</span>
-        <td ><span style="font-size:200%;color:green;">&starf;</span>
-        <td><span style="font-size:200%;color:green;">&starf;</span>
-        <td><span style="font-size:200%;color:green;">&starf;</span></td></td>
-</td>
+      <td>
+      <td><span style="font-size:200%;color:green;">&star;</span>
+      <td><span style="font-size:200%;color:green;">&star;</span>
+      <td><span style="font-size:200%;color:green;">&star;</span>
+      <td><span style="font-size:200%;color:green;">&star;</span>
+      <td><span style="font-size:200%;color:green;">&star;</span></td>
+      <td>
+      <td> CSS(3)</td>
+      <td>
+      <td><span style="font-size:200%;color:green;">&star;</span>
+      <td><span style="font-size:200%;color:green;">&star;</span>
+      <td><span style="font-size:200%;color:green;">&star;</span>
+      <td><span style="font-size:200%;color:green;">&star;</span>
+      <td><span style="font-size:200%;color:green;">&star;</span></td>
+      </td>
+      </td>
     </tr>
     <tr>
       <td>JAVA SCRIPT</td>
-      <td><td><span style="font-size:200%;color:green;">&starf;</span>
-      <td ><span style="font-size:200%;color:green;">&starf;</span>
-      <td ><span style="font-size:200%;color:green;">&starf;</span>
-      <td ><span style="font-size:200%;color:green;">&starf;</span>
-      <td ><span style="font-size:200%;color:green;">&starf;</span></td>
-      <td >  <td> PYTHON</td>
-        <td><td><span style="font-size:200%;color:green;">&starf;</span>
-        <td ><span style="font-size:200%;color:green;">&starf;</span>
-        <td ><span style="font-size:200%;color:green;">&starf;</span>
-        <td ><span style="font-size:200%;color:green;">&starf;</span>
-        <td ><span style="font-size:200%;color:green;">&starf;</span></td></td>
-</td>
+      <td>
+      <td><span style="font-size:200%;color:green;">&starf;</span>
+      <td><span style="font-size:200%;color:green;">&starf;</span>
+      <td><span style="font-size:200%;color:green;">&starf;</span>
+      <td><span style="font-size:200%;color:green;">&starf;</span>
+      <td><span style="font-size:200%;color:green;">&starf;</span></td>
+      <td>
+      <td> PYTHON</td>
+      <td>
+      <td><span style="font-size:200%;color:green;">&star;</span>
+      <td><span style="font-size:200%;color:green;">&star;</span>
+      <td><span style="font-size:200%;color:green;">&star;</span>
+      <td><span style="font-size:200%;color:green;">&star;</span>
+      <td><span style="font-size:200%;color:green;">&star;</span></td>
+      </td>
+      </td>
     </tr>
   </table>
-    <a href="contact-me.html">Feedback</a>
 </body>
 
 </html>
